=======
CHANGES
=======

0.2 (unreleased)
----------------

- require pyramid 1.3


0.1 (2011-11-19)
----------------

- Initial release