@@ -7,6 +7,9 @@ CHANGES
 
 - require pyramid 1.3
 
+- Rename Pricnipal.uri to Principal.__uri__ and AuthInfo.uri to AuthInfo.__uri__
+  to conform with other apis
+
 
 0.1 (2011-11-19)
 ----------------
